--- a/web-app/src/styles/globals.css
+++ b/web-app/src/styles/globals.css
@@ -6,6 +6,7 @@
   --color-primary: #085696;
   --color-primary-dark: #053257;
   --color-success: #4FBD1B;
+  --color-success-light: #83DB14;
   --color-error: #E04E10;
   --color-error-light: #FF4D00;
   --color-error-dark: #E33131;
