Added data to Next Route Handlers Integrated data to question

--- a/web-app/src/styles/globals.css
+++ b/web-app/src/styles/globals.css
@@ -13,6 +13,7 @@
   --color-foreground: #000000;
   --color-background: #FFFFFF;
   --color-gray-light: #E3E3E3;
+  --color-transparent: rgba(0, 0, 0, 0.62);
 }
 
 @media (prefers-color-scheme: dark) {
